Refactor blob handling in pubber